# HierSplit

./: .gitignore  NOTICE  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: reproducibility.md
experiments/: train.py
scripts/: smoke_test.py
src/hiersplit/: __init__.py  config.py  partition.py  protocols.py  scaler.py
src/hiersplit/models/: __init__.py  attention.py  staeformer.py  stgcn.py
src/hiersplit/runners/: __init__.py  base.py  hiersplit.py  independent.py  split.py
tests/: test_models.py  test_partition.py  test_protocols.py
